# math

./: .gitignore  CMakeLists.txt  readme.md  todo.txt
src/: CMakeLists.txt  Makefile  Math3d.cpp  Math3d.h  MathConstants.h  MathUtilities.h  cmake_install.cmake
src/functions/: BinaryFunction.h  CMakeLists.txt  CubicBezier.h  Function.h  FunctionAdd.h  FunctionDivision.h  FunctionMultiplication.h  FunctionRealVectorial.h  FunctionSubstraction.h  Makefile  cmake_install.cmake
test/: CMakeLists.txt  Math3dTests.h  tests.cpp
test/matchers/: mathMatchers.h
